--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@draft-js-plugins/editor": "^4.1.4",
-    "@draft-js-plugins/image": "^4.1.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@types/draft-js": "^0.11.16",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "draft-js": "^0.11.7",
     "draft-js-multidecorators": "^1.0.0",
     "draft-js-prism": "^1.0.6",
     "draftjs-to-html": "^0.9.1",
+    "highlight.js": "^11.9.0",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
